--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -20,7 +20,7 @@ body {
   font-family: Inter Tight;
 }
 .display-1 {
-  font-family: 'Inter Tight', sans-serif;
+  font-family: 'Lateef', serif;
   font-size: 5rem;
   line-height: 1;
 }
@@ -1362,7 +1362,7 @@ a {
 }
 .cid-tJS6uM4N87 .mbr-text,
 .cid-tJS6uM4N87 .mbr-section-btn {
-  color: #000000;
+  color: #f92c50;
 }
 .cid-tMlEXTHLbS {
   padding-top: 4rem;
@@ -1432,6 +1432,130 @@ a {
 .cid-tMlEXTHLbS .mbr-section-head .mbr-section-btn {
   color: #ffffff;
   text-align: center;
+}
+.cid-usGtaJtbus {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background: #edefeb;
+}
+.cid-usGtaJtbus .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-usGtaJtbus .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-usGtaJtbus .mbr-section-btn {
+  opacity: 0;
+  transition-delay: 0.1s;
+  z-index: 1;
+  position: relative;
+  margin: auto;
+}
+.cid-usGtaJtbus .content-head {
+  max-width: 800px;
+}
+.cid-usGtaJtbus .card1 {
+  background-image: url("../../../assets/images/team1.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+.cid-usGtaJtbus .card1:before {
+  background: #ffc195;
+}
+.cid-usGtaJtbus .card2 {
+  background-image: url("../../../assets/images/team2.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+.cid-usGtaJtbus .card2:before {
+  background: #ffd7ef;
+}
+.cid-usGtaJtbus .card3 {
+  background-image: url("../../../assets/images/team3.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+.cid-usGtaJtbus .card3:before {
+  background: #ffea64;
+}
+.cid-usGtaJtbus .card4 {
+  background-image: url("../../../assets/images/team4.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+.cid-usGtaJtbus .card4:before {
+  background: #9fe870;
+}
+.cid-usGtaJtbus .content-wrap {
+  margin: auto;
+  display: flex;
+  height: 100%;
+}
+.cid-usGtaJtbus .card-wrap {
+  border-radius: inherit;
+  height: 400px;
+  position: relative;
+  transition: all 0.3s;
+  margin-bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-usGtaJtbus .card-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-usGtaJtbus .card-wrap:before {
+  content: "";
+  position: absolute;
+  border-radius: inherit;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition-delay: 0.1s;
+  opacity: 0;
+}
+.cid-usGtaJtbus .card {
+  transition: transform 0.6s;
+}
+.cid-usGtaJtbus .card:hover .card-wrap,
+.cid-usGtaJtbus .card:focus-within .card-wrap {
+  transform: rotateY(180deg);
+}
+.cid-usGtaJtbus .card:hover .card-wrap:before,
+.cid-usGtaJtbus .card:focus-within .card-wrap:before {
+  opacity: 1;
+}
+.cid-usGtaJtbus .card:hover .mbr-section-btn,
+.cid-usGtaJtbus .card:focus-within .mbr-section-btn {
+  opacity: 1;
+  transform: rotateY(180deg);
+}
+@media (max-width: 767px) {
+  .cid-usGtaJtbus .card:hover .card-wrap {
+    transform: none;
+  }
+  .cid-usGtaJtbus .card:hover .card-wrap:before {
+    opacity: 0.8;
+  }
+  .cid-usGtaJtbus .card-wrap:before {
+    opacity: 0.8;
+  }
+  .cid-usGtaJtbus .card-wrap:hover {
+    transform: none;
+  }
+  .cid-usGtaJtbus .card-wrap:hover .mbr-section-btn {
+    transform: none;
+  }
+  .cid-usGtaJtbus .mbr-section-btn {
+    opacity: 1;
+  }
 }
 .cid-tMlDYtQ5fF {
   padding-top: 6rem;
@@ -1830,10 +1954,12 @@ a {
 }
 .cid-tJS9vXDdRK .mbr-section-title {
   color: #000000;
+  text-align: center;
 }
 .cid-tJS9vXDdRK .mbr-text,
 .cid-tJS9vXDdRK .mbr-section-btn {
   color: #232323;
+  text-align: center;
 }
 .cid-tLek7gQhG7 {
   padding-top: 6rem;
@@ -1867,6 +1993,7 @@ a {
 }
 .cid-tLek7gQhG7 .card-text {
   color: #232323;
+  text-align: right;
 }
 .cid-tJS9pBcTSa {
   padding-top: 6rem;
@@ -2036,4 +2163,49 @@ a {
 }
 .cid-tJS9NNcTLZ .mbr-section-title {
   color: #ffffff;
+}
+.cid-usGt36vJsC {
+  display: flex;
+  background-image: url("../../../assets/images/background17.jpg");
+}
+.cid-usGt36vJsC .mbr-overlay {
+  background-color: #000000;
+  opacity: 0.5;
+}
+@media (min-width: 768px) {
+  .cid-usGt36vJsC {
+    align-items: flex-end;
+  }
+  .cid-usGt36vJsC .row {
+    justify-content: center;
+  }
+  .cid-usGt36vJsC .content-wrap {
+    padding: 1rem 3rem;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-usGt36vJsC .content-wrap {
+    min-width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .cid-usGt36vJsC {
+    -webkit-align-items: center;
+    align-items: flex-end;
+  }
+  .cid-usGt36vJsC .mbr-row {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+  .cid-usGt36vJsC .content-wrap {
+    width: 100%;
+  }
+}
+.cid-usGt36vJsC .mbr-section-title,
+.cid-usGt36vJsC .mbr-section-subtitle {
+  text-align: center;
+}
+.cid-usGt36vJsC .mbr-text,
+.cid-usGt36vJsC .mbr-section-btn {
+  text-align: center;
 }
